--- a/src/pages/detail/index.scss
+++ b/src/pages/detail/index.scss
@@ -1,10 +1,40 @@
 .detail-main {
-    margin: 20px auto;
-    width: 800px;
-    .detail-content {
-        margin: auto;
-        width: 800px;
-        height: 600px;
-        border: #333 1px solid;
+    background: rgb(240, 240, 240);
+    height: 1000px;
+    .detail-title {
+        overflow: hidden;
+        box-sizing: border-box;
+        .ant-form-item {
+            margin-bottom: 0px;
+        }
+        .ant-input {
+            font-size: 27px;
+            height: 51px;
+            border: 1px solid #fff;
+        }
+        .ant-input:focus {
+            // border-color: #fff; 
+            box-shadow: 0px 0px #fff;
+        }
+        .title{
+            float: left;
+            width: 80%;
+        }
+        
+        .saveBtn{
+            float: right;
+            width: 15%;
+            margin: 10px 13px 8px;
+        }
+        margin: 0px auto;
+        width: 1100px;
+        background: #fff;
     }
+    .detail-content {
+        margin: 0px auto;
+        width: 1100px;
+        background: #fff;
+        height: 100%;
+    }
+
 }
